--- a/ComeX.WPF/UserControls/RoomUserControl.xaml
+++ b/ComeX.WPF/UserControls/RoomUserControl.xaml
@@ -1,4 +1,5 @@
 ﻿<UserControl x:Class="ComeX.WPF.UserControls.RoomUserControl"
+             x:Name="RoomUC"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +7,7 @@
              xmlns:local="clr-namespace:ComeX.WPF"
              mc:Ignorable="d" 
              d:DesignHeight="40" d:DesignWidth="140"
-             DataContext="{Binding RelativeSource={RelativeSource Self}}">
+             >
     <Grid x:Name="Room" Height="40" Width="140">
         <Grid.Resources>
             <ResourceDictionary>
@@ -41,6 +42,9 @@
             <ColumnDefinition Width="120"/>
         </Grid.ColumnDefinitions>
         <Ellipse x:Name="NotifyRoomEllipse" Grid.Column="0" Style="{StaticResource DefaultEllipseStyle}"/>
-        <Button x:Name="RoomNameButton" Grid.Column="1" Style="{StaticResource RoomNameButtonStyle}"/>
+        <Button x:Name="RoomNameButton" Grid.Column="1"
+                Style="{StaticResource RoomNameButtonStyle}"
+                Content="{Binding}"
+                Command="{Binding ChangeRoomCommand, ElementName=RoomUC}"/>
     </Grid>
 </UserControl>
