--- a/ComeX.WPF/Views/LoginView.xaml
+++ b/ComeX.WPF/Views/LoginView.xaml
@@ -34,7 +34,7 @@
                 <Image x:Name="LogoImage"
                         Height="120"
                        Margin="0,10,0,15"
-                        Source="/ExampleImages/put.jpg" />
+                        Source="/Resources/Images/logo2.png" />
                 <Label x:Name="UsernameLabel"
                         Content="Username" />
                 <TextBox x:Name="UsernameTextbox"
