--- a/ComeX.WPF/Styles.xaml
+++ b/ComeX.WPF/Styles.xaml
@@ -65,7 +65,7 @@
             </Trigger>
         </Style.Triggers>
     </Style>
-    
+
     <Style x:Key="RoundButtonStyle" TargetType="{x:Type Button}">
         <Setter Property="HorizontalContentAlignment" Value="Center"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
@@ -106,12 +106,13 @@
             </Setter.Value>
         </Setter>
     </Style>
-    
+
     <Style x:Key="DefaultBorderStyle" TargetType="{x:Type Border}">
         <Setter Property="BorderBrush" Value="{StaticResource DarkBlue2}" />
         <Setter Property="BorderThickness" Value="4" />
         <Setter Property="CornerRadius" Value="16" />
     </Style>
+    
     <Style x:Key="WindowBorderStyle" TargetType="{x:Type Border}" BasedOn="{StaticResource DefaultBorderStyle}">
         <Setter Property="Background" Value="{StaticResource DarkBlue3}" />
     </Style>
@@ -197,5 +198,14 @@
             </Trigger>
         </ControlTemplate.Triggers>
     </ControlTemplate>
+
+
+    <Style x:Key="WindowRoundButtonStyle" TargetType="{x:Type Button}">
+        <Setter Property="Template" Value="{StaticResource RoundedButtonTemplate}" />
+        <Setter Property="FontSize" Value="12" />
+        <Setter Property="Foreground" Value="{StaticResource DarkBlue1}" />
+        <Setter Property="BorderThickness" Value="4" />
+        <Setter Property="BorderBrush" Value="{StaticResource DarkBlue3}" />
+    </Style>
 
 </ResourceDictionary>
