--- a/ComeX.WPF/Views/SettingsView.xaml
+++ b/ComeX.WPF/Views/SettingsView.xaml
@@ -1,9 +1,10 @@
-﻿<Window x:Class="ComeX.WPF.Windows.SettingsWindow"
+﻿<Window x:Class="ComeX.WPF.Views.SettingsView"
+        x:Name="SettingsView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ComeX.WPF.Windows"
+        xmlns:local="clr-namespace:ComeX.WPF.Views"
         mc:Ignorable="d"
         AllowsTransparency="True"
         Background="Transparent"
@@ -28,9 +29,8 @@
             </Grid.RowDefinitions>
             <Grid x:Name="TitleGrid" Grid.Row="0">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="200"/>
+                    <ColumnDefinition Width="280"/>
                     <ColumnDefinition Width="100"/>
-                    <ColumnDefinition Width="80"/>
                 </Grid.ColumnDefinitions>
 
                 <TextBlock x:Name="Title" Grid.Column="0" Style="{StaticResource DefaultHeaderTextBlockStyle}"
@@ -40,22 +40,15 @@
                    Width="Auto"
                    Text=" Settings "/>
 
-                <Button x:Name="LogoutButton" Grid.Column="1" Style="{StaticResource WindowRoundButtonStyle}"
-                    Margin="0,5,0,5"
-                    HorizontalAlignment="Center"
-                    HorizontalContentAlignment="Center"
-                    Width="80"
-                    Content=" Log out "
-                    Click="LogoutButtonHandler"/>
-
-                <Button x:Name="CancelButton" Grid.Column="2" Style="{StaticResource WindowRoundButtonStyle}"
+                <Button x:Name="CancelButton" Grid.Column="1" Style="{StaticResource WindowRoundButtonStyle}"
                     Margin="0,5,0,5"
                     HorizontalAlignment="Center"
                     HorizontalContentAlignment="Center"
                     VerticalContentAlignment="Center"
                     Width="70"
                     Content=" Cancel "
-                    Click="CancelButtonHandler"/>
+                    Command="{Binding CancelCommand}"
+                    CommandParameter="{Binding ElementName=SettingsView}"/>
             </Grid>
             <Grid Grid.Row="1" Margin="0,5,8,5" Background="{StaticResource DarkBlue2}">
                 <StackPanel x:Name="MainStackP" HorizontalAlignment="Left">
@@ -89,6 +82,11 @@
                             <Setter Property="Margin" Value="10,5,10,5"/>
                         </Style>
                     </StackPanel.Resources>
+
+                    <Button x:Name="LogoutButton"
+                            Content=" Log out "
+                            Command="{Binding LogoutCommand}"
+                            CommandParameter="{Binding ElementName=SettingsView}"/>
 
                     <Label Content="Change password" />
                     <TextBlock
@@ -125,10 +123,12 @@
                         </Rectangle>
                         <PasswordBox x:Name="OldPassword" Grid.Column="0" Grid.Row="0"
                              GotFocus="RemoveOldPasswordPlaceholder"
-                             LostFocus="AddOldPasswordPlaceholder"/>
+                             LostFocus="AddOldPasswordPlaceholder"
+                             PasswordChanged="OldPasswordChanged"/>
                         <PasswordBox x:Name="NewPassword" Grid.Column="1" Grid.Row="0"
                              GotFocus="RemoveNewPasswordPlaceholder"
-                             LostFocus="AddNewPasswordPlaceholder"/>
+                             LostFocus="AddNewPasswordPlaceholder"
+                             PasswordChanged="NewPasswordChanged"/>
                         <Label x:Name="OldPasswordErrorLabel" Grid.Column="0" Grid.Row="1"
                             Margin="0,0,0,0"
                             Foreground="Red"
@@ -138,13 +138,23 @@
                             Foreground="Red"
                             Visibility="Collapsed"/>
                     </Grid>
-                    <Button Content=" Change password "
-                            Click="ChangePasswordButtonHandler"/>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
+                        <Button Content=" Change password " Grid.Column="0" 
+                            Command="{Binding ChangePasswordCommand}"/>
+                        <TextBlock x:Name="ChangePasswordErrorLabel" Grid.Column="1" 
+                               Foreground="Red"
+                               Visibility="{Binding ChangePasswordErrorVisibility}"
+                               Text="{Binding ChangePasswordError}"/>
+                    </Grid>
 
                     <Label Content="Delete account" />
                     <TextBlock Text="Deleted account cannot be retrieved" />
                     <Button Content=" Delete account "
-                            Click="DeleteAccountButtonHandler"/>
+                            Command="{Binding DeleteAccountCommand}"/>
                 </StackPanel>
             </Grid>
         </Grid>
