--- a/ComeX.WPF/Views/ChatView.xaml
+++ b/ComeX.WPF/Views/ChatView.xaml
@@ -1,4 +1,5 @@
 ﻿<UserControl x:Class="ComeX.WPF.Views.ChatView"
+             x:Name="ChatViewUserControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -14,8 +15,10 @@
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </UserControl.Resources>
-    
-        <Grid x:Name="MainGrid">
+
+    <Grid x:Name="MainGrid"
+          Height="{Binding ActualHeight, ElementName=ChatViewUserControl}"
+          Width="{Binding ActualWidth, ElementName=ChatViewUserControl}">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="80"></ColumnDefinition>
                 <ColumnDefinition Width="160"></ColumnDefinition>
@@ -68,7 +71,7 @@
                 <Button x:Name="Settings"
                         Width="60"
                         Height="60"
-                        Command="{Binding SettingsCommand}">
+                        Command="{Binding OpenSettingsCommand}">
                 </Button>
                 </WrapPanel>
             </Grid>
@@ -105,7 +108,7 @@
 
             <Grid Grid.Column="2" x:Name="ContentGrid">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition MinWidth="200"></ColumnDefinition>
+                    <ColumnDefinition MinWidth="200" Width="*"></ColumnDefinition>
                     <ColumnDefinition Width="160"></ColumnDefinition>
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
@@ -140,17 +143,14 @@
                     </WrapPanel.Resources>
                     <Button Content="+" />
                 </WrapPanel>
-                <Grid Grid.Column="0" Grid.Row="1" x:Name="RoomMessagesGrid" Background="{StaticResource DarkBlue3}">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="59*"/>
-                        <ColumnDefinition Width="341*"/>
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
+            <Grid Grid.Column="0" Grid.Row="1" x:Name="RoomMessagesGrid"
+                  Background="{StaticResource DarkBlue3}">
+                <Grid.RowDefinitions>
                         <RowDefinition Height="*"></RowDefinition>
                         <RowDefinition Height="110"></RowDefinition>
                     </Grid.RowDefinitions>
 
-                    <ListView Grid.Row="0" Grid.ColumnSpan="2" x:Name="MessagesListView"
+                    <ListView Grid.Row="0" x:Name="MessagesListView"
                           Margin="5"
                           ItemsSource="{Binding CurrentRoomMessages}"
                           Background="{StaticResource DarkBlue3}"
@@ -168,7 +168,7 @@
                         </ListView.ItemContainerStyle>
                         <ListView.ItemsPanel>
                             <ItemsPanelTemplate>
-                                <WrapPanel x:Name="MessagesWrapP" Orientation="Vertical"/>
+                                <WrapPanel x:Name="MessagesWrapP" Orientation="Vertical" />
                             </ItemsPanelTemplate>
                         </ListView.ItemsPanel>
                         <ListView.ItemTemplate>
@@ -269,50 +269,49 @@
                         </ListView.ItemTemplate>
                     </ListView>
 
-                    <Grid Grid.Row="1" x:Name="TypeGrid" Margin="0,0,0,10" Grid.ColumnSpan="2">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="70"></RowDefinition>
-                            <RowDefinition Height="40"></RowDefinition>
-                        </Grid.RowDefinitions>
-                        <Rectangle Grid.Row="0" Fill="{StaticResource DarkBlue2}"/>
-                        <Rectangle x:Name="Placeholder" Grid.Row="0"
+                <Grid Grid.Row="1" x:Name="TypeGrid" Margin="0,0,0,10">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="70"></RowDefinition>
+                        <RowDefinition Height="40"></RowDefinition>
+                    </Grid.RowDefinitions>
+                    <Rectangle Grid.Row="0" Fill="{StaticResource DarkBlue2}"/>
+                    <Rectangle x:Name="Placeholder" Grid.Row="0"
                                Height="23"
                                Width="141"
                                HorizontalAlignment="Left"
                                VerticalAlignment="Top">
-                            <!--<Rectangle.Fill>
+                        <!--<Rectangle.Fill>
                                 <ImageBrush ImageSource="Resources/Images/Placeholders/messagePlaceholder.jpg"/>
                             </Rectangle.Fill>-->
-                        </Rectangle>
+                    </Rectangle>
                     <StackPanel
                         Orientation="Vertical">
                         <TextBox Style="{StaticResource DefaultTextBoxStyle}" Grid.Row="0" x:Name="TypeTextBox"
                              FontSize="16"
                              BorderThickness="0"
                              Foreground ="{StaticResource LightBlue1}"
-
+                             TextWrapping="Wrap"
                              FontStyle="Normal"
                              CaretBrush="{StaticResource LightBlue1}"
                              Text="{Binding Content}"/>
                     </StackPanel>
 
                     <WrapPanel Grid.Row="1" x:Name="TypeToolsWrapPanel" Orientation="Horizontal" FlowDirection="RightToLeft">
-                            <WrapPanel.Resources>
-                                <Style TargetType="{x:Type Button}" BasedOn="{StaticResource RoundButtonStyle}">
-                                    <Setter Property="Margin" Value="5,5,5,5" />
-                                    <Setter Property="Width" Value="20" />
-                                    <Setter Property="Height" Value="20" />
-                                    <Setter Property="HorizontalAlignment" Value="Right" />
-                                    <Setter Property="VerticalAlignment" Value="Center" />
-                                </Style>
-                            </WrapPanel.Resources>
+                        <WrapPanel.Resources>
+                            <Style TargetType="{x:Type Button}" BasedOn="{StaticResource RoundButtonStyle}">
+                                <Setter Property="Margin" Value="5,5,5,5" />
+                                <Setter Property="Width" Value="20" />
+                                <Setter Property="Height" Value="20" />
+                                <Setter Property="HorizontalAlignment" Value="Right" />
+                                <Setter Property="VerticalAlignment" Value="Center" />
+                            </Style>
+                        </WrapPanel.Resources>
                         <Button x:Name="SendButton" Width="40" Command="{Binding SendChatMessageCommand}" />
                         <Button x:Name="SurveyButton" Command="{Binding CreateSurveyCommand}"></Button>
                         <Button x:Name="PictureButton"></Button>
-                        </WrapPanel>
-                    </Grid>
-
+                    </WrapPanel>
                 </Grid>
+            </Grid>
                 <WrapPanel Grid.Column="1" Grid.Row="1" x:Name="ThreadsWrapP" Background="{StaticResource DarkBlue1}">
 
                 </WrapPanel>
