--- a/ComeX.WPF/Views/SettingsView.xaml
+++ b/ComeX.WPF/Views/SettingsView.xaml
@@ -1,5 +1,4 @@
 ﻿<Window x:Class="ComeX.WPF.Views.SettingsView"
-        x:Name="SettingsView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -47,8 +46,7 @@
                     VerticalContentAlignment="Center"
                     Width="70"
                     Content=" Cancel "
-                    Command="{Binding CancelCommand}"
-                    CommandParameter="{Binding ElementName=SettingsView}"/>
+                    Click="CancelButtonHandler"/>
             </Grid>
             <Grid Grid.Row="1" Margin="0,5,8,5" Background="{StaticResource DarkBlue2}">
                 <StackPanel x:Name="MainStackP" HorizontalAlignment="Left">
@@ -85,8 +83,7 @@
 
                     <Button x:Name="LogoutButton"
                             Content=" Log out "
-                            Command="{Binding LogoutCommand}"
-                            CommandParameter="{Binding ElementName=SettingsView}"/>
+                            Click="LogoutButtonHandler"/>
 
                     <Label Content="Change password" />
                     <TextBlock
