--- a/ComeX.WPF/Views/ChatView.xaml
+++ b/ComeX.WPF/Views/ChatView.xaml
@@ -208,6 +208,7 @@
                              TextWrapping="Wrap"
                              FontStyle="Normal"
                              CaretBrush="{StaticResource LightBlue1}"
+                             MaxLength="{Binding MessageMaxLen}"
                              Text="{Binding Content}"/>
                     </StackPanel>
 
