--- a/ComeX.WPF/Views/RegisterView.xaml
+++ b/ComeX.WPF/Views/RegisterView.xaml
@@ -27,12 +27,13 @@
                 <Setter Property="Margin" Value="10,10,0,0"/>
                 <Setter Property="FontSize" Value="16"/>
             </Style>
-            <Style x:Key="ErrorLabelStyle" TargetType="{x:Type Label}">
+            <Style x:Key="ErrorTextBlockStyle" TargetType="{x:Type TextBlock}">
                 <Setter Property="HorizontalAlignment" Value="Left"/>
                 <Setter Property="Foreground" Value="{StaticResource LightBlue1}"/>
                 <Setter Property="Margin" Value="10,2,0,0"/>
                 <Setter Property="FontSize" Value="16"/>
                 <Setter Property="Foreground" Value="Red"/>
+                <Setter Property="TextWrapping" Value="Wrap"/>
             </Style>
         </Grid.Resources>
 
@@ -54,10 +55,12 @@
                          FontSize="16"
                          Height="30"
                          Padding="10,0,0,0"
+                         MaxLength="{Binding UsernameMaxLen}"
                          Text="{Binding Username}"/>
-                <Label x:Name="UsernameErrorLabel" Style="{StaticResource ErrorLabelStyle}"
-                       Visibility="{Binding UsernameErrorVisibility}"
-                       Content="{Binding UsernameError}"/>
+                <TextBlock x:Name="UsernameErrorLabel"
+                         Style="{StaticResource ErrorTextBlockStyle}"
+                         Visibility="{Binding UsernameErrorVisibility}"
+                         Text="{Binding UsernameError}"/>
                 <Label x:Name="PasswordLabel"
                         Content="Password" />
                 <PasswordBox x:Name="PasswordBox"
@@ -70,10 +73,12 @@
                          FontSize="16"
                          Height="30"
                          Padding="10,0,0,0"
+                         MaxLength="{Binding PasswordMaxLen}"
                          PasswordChanged="OnPasswordChanged"/>
-                <Label x:Name="PasswordErrorLabel" Style="{StaticResource ErrorLabelStyle}"
-                       Visibility="{Binding PasswordErrorVisibility}"
-                       Content="{Binding PasswordError}"/>
+                <TextBlock x:Name="PasswordErrorLabel"
+                         Style="{StaticResource ErrorTextBlockStyle}"
+                         Visibility="{Binding PasswordErrorVisibility}"
+                         Text="{Binding PasswordError}"/>
                 <Label x:Name="RetypePasswordLabel"
                         Content="Retype password" />
                 <PasswordBox x:Name="RetypePasswordBox"
@@ -86,10 +91,12 @@
                          FontSize="16"
                          Height="30"
                          Padding="10,0,0,0"
+                         MaxLength="{Binding PasswordMaxLen}"
                          PasswordChanged="OnRetypePasswordChanged"/>
-                <Label x:Name="RetypePasswordErrorLabel" Style="{StaticResource ErrorLabelStyle}"
-                       Visibility="{Binding RetypePasswordErrorVisibility}"
-                       Content="{Binding RetypePasswordError}"/>
+                <TextBlock x:Name="RetypePasswordErrorLabel"
+                         Style="{StaticResource ErrorTextBlockStyle}"
+                         Visibility="{Binding RetypePasswordErrorVisibility}"
+                         Text="{Binding RetypePasswordError}"/>
                 <Button x:Name="LoginButton"
                         Template="{StaticResource RoundedButtonTemplate}"
                         Margin="30"
