--- a/ComeX.WPF/Views/LoginView.xaml
+++ b/ComeX.WPF/Views/LoginView.xaml
@@ -47,6 +47,7 @@
                          FontSize="16"
                          Height="30"
                          Padding="10,0,0,0"
+                         MaxLength="{Binding UsernameMaxLen}"
                          Text="{Binding Username}"/>
                 <Label x:Name="UsernameErrorLabel"
                        Margin="10,2,0,0"
@@ -65,6 +66,7 @@
                          FontSize="16"
                          Height="30"
                          Padding="10,0,0,0"
+                         MaxLength="{Binding PasswordMaxLen}"
                          PasswordChanged="OnPasswordChanged"/>
                 <Label x:Name="PasswordErrorLabel"
                                               Margin="10,2,0,0"
